# qt-frameless

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
demo/: demo.pro
examples/demo/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h  widget.ui
qframeless/: qframelesshelper.cpp
src/: CMakeLists.txt
src/qframeless/: CMakeLists.txt
src/qframeless/cmake/: qframelessConfig.cmake.in
src/qframeless/include/: gframeless_global.h  qframelessdialog.h  qframelesshelper.h  qframelessmainwindow.h  qframelesswidget.h  qshadowhelper.h
src/qframeless/include/qframeless/: qframelessdialog.h  qframelesshelper.h  qframelessmainwindow.h  qshadowhelper.h
src/qframeless/src/: qframelessdialog.cpp  qframelesshelper.cpp  qframelessmainwindow.cpp  qframelesswidget.cpp  qshadowhelper.cpp
